--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -153,7 +153,7 @@ tracing-futures = "0.2"
 # Required for wellknown types
 prost-types = "0.6"
 # Hyper example
-hyper = "0.13"
+hyper = { version = "0.13", features =["runtime"] }
 warp = { version = "0.2", default-features = false }
 http = "0.2"
 http-body = "0.3"
@@ -161,6 +161,7 @@ pin-project = "0.4.17"
 # Health example
 tonic-health = { path = "../tonic-health" }
 listenfd = "0.3"
+async-std = "1"
 
 [build-dependencies]
 tonic-build = { path = "../tonic-build", features = ["prost"] }
